Move solution into solution dir

--- a/episodes/2-intro-to-fortran-unit-tests/challenge-1/solution/fpm.toml
+++ b/episodes/2-intro-to-fortran-unit-tests/challenge-1/solution/fpm.toml
@@ -1,4 +1,4 @@
-name = "episode-2-challenge-1"
+name = "episode-2-challenge-1-solution"
 
 [dev-dependencies]
 veggies.git = "https://gitlab.com/everythingfunctional/veggies"
@@ -8,3 +8,8 @@ veggies.tag = "main"
 name = "game-of-life"
 source-dir = "src"
 main = "game_of_life.f90"
+
+[[test]]
+name = "game_of_life_sol_test"
+source-dir = "test"
+main = "main.f90"
