move tests to veggies-test

--- a/episodes/3-fortran-unit-test-syntax/challenge-1/fpm.toml
+++ b/episodes/3-fortran-unit-test-syntax/challenge-1/fpm.toml
@@ -11,5 +11,5 @@ main = "game_of_life.f90"
 
 [[test]]
 name = "game_of_life_test"
-source-dir = "test"
+source-dir = "veggies-test"
 main = "main.f90"
