--- a/episodes/3-fortran-unit-test-syntax/challenge-1/fpm.toml
+++ b/episodes/3-fortran-unit-test-syntax/challenge-1/fpm.toml
@@ -1,6 +1,8 @@
 name = "episode-2-challenge-1-solution"
 
 [dev-dependencies]
+test-drive.git = "https://github.com/fortran-lang/test-drive"
+test-drive.tag = "v0.5.0"
 veggies.git = "https://gitlab.com/everythingfunctional/veggies"
 veggies.tag = "main"
 
@@ -10,6 +12,11 @@ source-dir = "src"
 main = "game_of_life.f90"
 
 [[test]]
-name = "game_of_life_test"
+name = "veggies_game_of_life_test"
 source-dir = "veggies-test"
+main = "main.f90"
+
+[[test]]
+name = "test-drive_game_of_life_test"
+source-dir = "test-drive-test"
 main = "main.f90"
