Add pfunit test of check_for_steady_state

--- a/episodes/3-fortran-unit-test-syntax/challenge-1/pfunit-test/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge-1/pfunit-test/CMakeLists.txt
@@ -15,10 +15,21 @@ file(GLOB
   test_srcs
   "${PROJ_PFUNIT_DIR}/*.pf"
 )
+
+# evolve_board tests
 set(test_evolve_board_src ${test_srcs})
 list(FILTER test_evolve_board_src INCLUDE REGEX ".*test_evolve_board.pf")
 
 add_pfunit_ctest (evolve_board_tests
   TEST_SOURCES ${test_evolve_board_src}
+  LINK_LIBRARIES sut # your application library
+  )
+
+# check_for_steady_state tests
+set(test_check_for_steady_state_src ${test_srcs})
+list(FILTER test_check_for_steady_state_src INCLUDE REGEX ".*test_check_for_steady_state.pf")
+
+add_pfunit_ctest (check_for_steady_state_tests
+  TEST_SOURCES ${test_check_for_steady_state_src}
   LINK_LIBRARIES sut # your application library
   )
