Add ability to build test-drive tests with cmake

--- a/episodes/3-fortran-unit-test-syntax/challenge-1/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge-1/CMakeLists.txt
@@ -17,6 +17,11 @@ add_executable("${PROJECT_NAME}" "${PROJ_SRC_FILES}")
 enable_testing()
 
 #--------------------------------------#
+#             test-drive               #
+#--------------------------------------#
+add_subdirectory("test-drive-test")
+
+#--------------------------------------#
 #               pFUnit                 #
 #--------------------------------------#
 add_subdirectory("pfunit-test")
