Document pfunit and test-drive cmake files and ignore test-drive internal tests

--- a/episodes/3-fortran-unit-test-syntax/challenge-1/test-drive-test/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge-1/test-drive-test/CMakeLists.txt
@@ -1,11 +1,9 @@
-# Install the test-drive dependency
+# Define test-drive related variables
 set(test_lib "test-drive")
 set(test_pkg "TEST_DRIVE")
 set(test_url "https://github.com/fortran-lang/test-drive")
 
-# Ignore tests from test-drive itself
-configure_file(${CMAKE_SOURCE_DIR}/test-drive-test/CTestCustom.cmake ${CMAKE_BINARY_DIR})
-
+# Download test-drive sources
 message(STATUS "Retrieving ${test_lib} from ${test_url}")
 include(FetchContent)
 FetchContent_Declare(
@@ -15,6 +13,7 @@ FetchContent_Declare(
     )
 FetchContent_MakeAvailable("${test_lib}")
 
+# Allows using test-drive via target_link_libraries()
 add_library("${test_lib}::${test_lib}" INTERFACE IMPORTED)
 target_link_libraries("${test_lib}::${test_lib}" INTERFACE "${test_lib}")
 
@@ -25,6 +24,9 @@ if(NOT EXISTS "${${test_pkg}_BINARY_DIR}/include")
     make_directory("${${test_pkg}_BINARY_DIR}/include")
 endif()
 
+# Ignore tests from test-drive itself
+configure_file(${CMAKE_SOURCE_DIR}/CTestCustom.cmake ${CMAKE_BINARY_DIR})
+
 # Define test files
 set(PROJ_TEST_DRIVE_DIR "${PROJECT_SOURCE_DIR}/test-drive-test")
 
@@ -32,13 +34,16 @@ set(PROJ_TEST_DRIVE_DIR "${PROJECT_SOURCE_DIR}/test-drive-test")
 set(PROJ_SRC_FILES_EXEC_MAIN ${PROJ_SRC_FILES})
 list(FILTER PROJ_SRC_FILES_EXEC_MAIN EXCLUDE REGEX ".*game_of_life.f90")
 
-# Unit testing
+# List the tests we have available. 
+# NOTE: This must match the names of testsuites in main.f90 and the suffixes of the test module files
 set(
   tests
   "evolve_board"
   "check_for_steady_state"
   "read_model_from_file"
 )
+
+# Define a list of test source files
 set(
   test-srcs
   "main.f90"
@@ -48,17 +53,21 @@ foreach(t IN LISTS tests)
   list(APPEND test-srcs "${PROJ_TEST_DRIVE_DIR}/test_${t}.f90")
 endforeach()
 
+# Create an executable which calls the main entrypoint for the tests
 add_executable(
   "test_${PROJECT_NAME}-test-drive"
   "${test-srcs}"
   "${PROJ_SRC_FILES_EXEC_MAIN}"
 )
+
+# Link test-drive to our new test executable
 target_link_libraries(
   "test_${PROJECT_NAME}-test-drive"
   PRIVATE
-  "test-drive::test-drive"
+  "${test_lib}"
 )
 
+# Add specific tests which pass the test name to our new executable
 foreach(t IN LISTS tests)
   add_test(NAME "testdrive_${t}" COMMAND "test_${PROJECT_NAME}-test-drive" "${t}" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 endforeach()
