--- a/episodes/3-fortran-unit-test-syntax/challenge-1/challenge/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge-1/challenge/CMakeLists.txt
@@ -17,6 +17,11 @@ add_executable("${PROJECT_NAME}" "${PROJ_SRC_FILES}")
 enable_testing()
 
 #--------------------------------------#
+#               veggies                #
+#--------------------------------------#
+# add_subdirectory("veggies-test")
+
+#--------------------------------------#
 #             test-drive               #
 #--------------------------------------#
 add_subdirectory("test-drive-test")
