--- a/episodes/4-debugging-a-broken-test/challenge-1/fpm.toml
+++ b/episodes/4-debugging-a-broken-test/challenge-1/fpm.toml
@@ -3,8 +3,20 @@ name = "ep-4-ch-1"
 [dev-dependencies]
 test-drive.git = "https://github.com/fortran-lang/test-drive"
 test-drive.tag = "v0.5.0"
+veggies.git = "https://gitlab.com/everythingfunctional/veggies"
+veggies.tag = "main"
+
+[build]
+auto-executables = false
+auto-examples = false
+auto-tests = false
 
 [[test]]
-name = "test_matrix_transforms"
-source-dir = "test"
+name = "testdrive_test_matrix_transforms"
+source-dir = "test/test-drive"
+main = "main.f90"
+
+[[test]]
+name = "veggies_test_matrix_transforms"
+source-dir = "test/veggies"
 main = "main.f90"
