Re-enable serial tests and fix

--- a/episodes/5-testing-parallel-code/solution/pfunit-test/CMakeLists.txt
+++ b/episodes/5-testing-parallel-code/solution/pfunit-test/CMakeLists.txt
@@ -1,8 +1,7 @@
 find_package(PFUNIT REQUIRED)
 enable_testing()
 
-# set(CMAKE_Fortran_FLAGS "-fopenmp")
-set(CMAKE_Fortran_FLAGS "-g -O0 -Wall -fno-omit-frame-pointer -ffpe-trap=invalid,zero,overflow")
+set(CMAKE_Fortran_FLAGS "-fopenmp")
 
 # Ensure test data is available at runtime
 file(CREATE_LINK "${PROJECT_SOURCE_DIR}/test-models"
@@ -23,34 +22,37 @@ file(GLOB
 )
 
 # evolve_board tests
-# set(test_evolve_board_src ${test_srcs})
-# list(FILTER test_evolve_board_src INCLUDE REGEX ".*test_evolve_board.pf")
+set(test_evolve_board_src ${test_srcs})
+list(FILTER test_evolve_board_src INCLUDE REGEX ".*test_evolve_board.pf")
 
-# add_pfunit_ctest (pfunit_evolve_board_tests
-#   TEST_SOURCES ${test_evolve_board_src}
-#   LINK_LIBRARIES sut # your application library
-#   )
+add_pfunit_ctest (pfunit_evolve_board_tests
+  TEST_SOURCES ${test_evolve_board_src}
+  LINK_LIBRARIES sut # your application library
+  )
 
 # check_for_steady_state tests
-# set(test_check_for_steady_state_src ${test_srcs})
-# list(FILTER test_check_for_steady_state_src INCLUDE REGEX ".*test_check_for_steady_state.pf")
+set(test_check_for_steady_state_src ${test_srcs})
+list(FILTER test_check_for_steady_state_src INCLUDE REGEX ".*test_check_for_steady_state.pf")
 
-# add_pfunit_ctest (pfunit_check_for_steady_state_tests
-#   TEST_SOURCES ${test_check_for_steady_state_src}
-#   LINK_LIBRARIES sut # your application library
-#   )
+add_pfunit_ctest (pfunit_check_for_steady_state_tests
+  TEST_SOURCES ${test_check_for_steady_state_src}
+  LINK_LIBRARIES sut # your application library
+  )
 
 # read_model_from_file tests
-# set(test_read_model_from_file_src ${test_srcs})
-# list(FILTER test_read_model_from_file_src INCLUDE REGEX ".*test_read_model_from_file.pf")
+set(test_read_model_from_file_src ${test_srcs})
+list(FILTER test_read_model_from_file_src INCLUDE REGEX ".*test_read_model_from_file.pf")
 
-# add_pfunit_ctest (pfunit_read_model_from_file_tests
-#   TEST_SOURCES ${test_read_model_from_file_src}
-#   LINK_LIBRARIES sut # your application library
-#   )
+add_pfunit_ctest (pfunit_read_model_from_file_tests
+  TEST_SOURCES ${test_read_model_from_file_src}
+  LINK_LIBRARIES sut # your application library
+  )
 
+#########################
+# MPI tests
+#########################
 
-# exchange_boundaries tests
+# get_local_grid_info tests
 set(test_get_local_grid_info_src ${test_srcs})
 list(FILTER test_get_local_grid_info_src INCLUDE REGEX ".*test_get_local_grid_info.pf")
 
