--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,12 +5,16 @@ on:
   push:
     branches:
       - main
+    paths:
+      - episodes/*
   pull_request:
     types:
       - opened
       - ready_for_review
       - reopened
       - synchronize
+    paths:
+      - episodes/*
 
 concurrency:
   cancel-in-progress: true
