Re-organise episode 5 structure and add challeneg and solution READMEs

--- a/episodes/5-testing-parallel-code/challenge/CMakeLists.txt
+++ b/episodes/5-testing-parallel-code/challenge/CMakeLists.txt
@@ -28,16 +28,6 @@ target_link_libraries("${PROJECT_NAME}" "${TO_LINK_TO_SRC}")
 enable_testing()
 
 #--------------------------------------#
-#               veggies                #
-#--------------------------------------#
-# add_subdirectory("veggies-test")
-
-#--------------------------------------#
-#             test-drive               #
-#--------------------------------------#
-# add_subdirectory("test-drive-test")
-
-#--------------------------------------#
 #               pFUnit                 #
 #--------------------------------------#
-add_subdirectory("pfunit-test")
+add_subdirectory("test")
