Update episode 3 to have find_steady_state subroutine and add pfunit test

--- a/episodes/3-fortran-unit-test-syntax/challenge-1/challenge/pfunit-test/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge-1/challenge/pfunit-test/CMakeLists.txt
@@ -44,3 +44,12 @@ add_pfunit_ctest (pfunit_read_model_from_file_tests
   TEST_SOURCES ${test_read_model_from_file_src}
   LINK_LIBRARIES sut # your application library
   )
+
+# find_steady_state tests
+set(test_find_steady_state_src ${test_srcs})
+list(FILTER test_find_steady_state_src INCLUDE REGEX ".*test_find_steady_state.pf")
+
+add_pfunit_ctest (pfunit_find_steady_state_tests
+  TEST_SOURCES ${test_find_steady_state_src}
+  LINK_LIBRARIES sut # your application library
+  )
