Add ep 4 test to CI

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,3 +41,6 @@ jobs:
       
       - name: Test episode 3
         run: docker build . -f docker/Dockerfile.ep-3
+      
+      - name: Test episode 4
+        run: docker build . -f docker/Dockerfile.ep-4
