--- a/fortitude.toml
+++ b/fortitude.toml
@@ -1,6 +1,7 @@
 [check]
 ignore = [
     "C003", # 'implicit none' missing 'external'
+    "S091", # file extension should be '.f90' or '.F90'
 ]
 line-length = 132
 
