--- a/episodes/3-fortran-unit-test-syntax/challenge/test/pfunit/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge/test/pfunit/CMakeLists.txt
@@ -2,8 +2,8 @@ find_package(PFUNIT REQUIRED)
 enable_testing()
 
 # Ensure test data is available at runtime
-file(CREATE_LINK "${PROJECT_SOURCE_DIR}/test-models"
-        "${CMAKE_CURRENT_BINARY_DIR}/test-models" SYMBOLIC)
+file(CREATE_LINK "${PROJECT_SOURCE_DIR}/test/models"
+        "${CMAKE_CURRENT_BINARY_DIR}/test/models" SYMBOLIC)
 
 # Filter out the main.f90 files. We can only have one main() function in our tests
 set(PROJ_SRC_FILES_EXEC_MAIN ${PROJ_SRC_FILES})
@@ -15,7 +15,7 @@ add_library (sut STATIC ${PROJ_SRC_FILES_EXEC_MAIN})
 # List all  test files
 file(GLOB
   test_srcs
-  "${PROJECT_SOURCE_DIR}/pfunit-test/*.pf"
+  "${PROJECT_SOURCE_DIR}/test/pfunit/*.pf"
 )
 
 # evolve_board tests
