--- a/episodes/3-fortran-unit-test-syntax/challenge/test/veggies/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge/test/veggies/CMakeLists.txt
@@ -11,14 +11,14 @@ FetchContent_Declare(
 FetchContent_MakeAvailable("veggies")
 
 # Ignore tests from test-drive itself
-configure_file(${CMAKE_SOURCE_DIR}/veggies-test/CTestCustom.cmake ${CMAKE_BINARY_DIR})
+configure_file(${CMAKE_SOURCE_DIR}/test/veggies/CTestCustom.cmake ${CMAKE_BINARY_DIR})
 
 # Ensure test data is available at runtime
-file(CREATE_LINK "${PROJECT_SOURCE_DIR}/test-models"
-        "${CMAKE_CURRENT_BINARY_DIR}/test-models" SYMBOLIC)
+file(CREATE_LINK "${PROJECT_SOURCE_DIR}/test/models"
+        "${CMAKE_CURRENT_BINARY_DIR}/test/models" SYMBOLIC)
 
 # Define test files
-set(PROJ_VEGGIES_DIR "${PROJECT_SOURCE_DIR}/veggies-test")
+set(PROJ_VEGGIES_DIR "${PROJECT_SOURCE_DIR}/test/veggies")
 
 # Filter out the main.f90 files. We can only have one main() function in our tests
 set(PROJ_SRC_FILES_EXEC_MAIN ${PROJ_SRC_FILES})
