--- a/episodes/3-fortran-unit-test-syntax/challenge/fpm.toml
+++ b/episodes/3-fortran-unit-test-syntax/challenge/fpm.toml
@@ -6,6 +6,11 @@ test-drive.tag = "v0.5.0"
 veggies.git = "https://gitlab.com/everythingfunctional/veggies"
 veggies.tag = "main"
 
+[build]
+auto-executables = false
+auto-tests = false
+auto-examples = false
+
 [[executable]]
 name = "game-of-life"
 source-dir = "src"
@@ -13,10 +18,10 @@ main = "game_of_life.f90"
 
 [[test]]
 name = "veggies_game_of_life_test"
-source-dir = "veggies-test"
+source-dir = "test/veggies"
 main = "main.f90"
 
 [[test]]
 name = "test-drive_game_of_life_test"
-source-dir = "test-drive-test"
+source-dir = "test/test-drive"
 main = "main.f90"
