Fix ep 3 tests so test data is always available

--- a/episodes/3-fortran-unit-test-syntax/solution/test/veggies/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/solution/test/veggies/CMakeLists.txt
@@ -14,8 +14,9 @@ FetchContent_MakeAvailable("veggies")
 configure_file(${CMAKE_SOURCE_DIR}/test/veggies/CTestCustom.cmake ${CMAKE_BINARY_DIR})
 
 # Ensure test data is available at runtime
+file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/test")
 file(CREATE_LINK "${PROJECT_SOURCE_DIR}/test/models"
-        "${CMAKE_CURRENT_BINARY_DIR}/test-models" SYMBOLIC)
+        "${CMAKE_CURRENT_BINARY_DIR}/test/models" SYMBOLIC)
 
 # Define test files
 set(PROJ_VEGGIES_DIR "${PROJECT_SOURCE_DIR}/test/veggies")
