--- a/episodes/3-fortran-unit-test-syntax/solution/test/pfunit/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/solution/test/pfunit/CMakeLists.txt
@@ -2,8 +2,9 @@ find_package(PFUNIT REQUIRED)
 enable_testing()
 
 # Ensure test data is available at runtime
+file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/test")
 file(CREATE_LINK "${PROJECT_SOURCE_DIR}/test/models"
-        "${CMAKE_CURRENT_BINARY_DIR}/test-models" SYMBOLIC)
+        "${CMAKE_CURRENT_BINARY_DIR}/test/models" SYMBOLIC)
 
 # Filter out the main.f90 files. We can only have one main() function in our tests
 set(PROJ_SRC_FILES_EXEC_MAIN ${PROJ_SRC_FILES})
