--- a/episodes/3-fortran-unit-test-syntax/solution/test/test-drive/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/solution/test/test-drive/CMakeLists.txt
@@ -27,6 +27,11 @@ endif()
 # Define test files
 set(PROJ_TEST_DRIVE_DIR "${PROJECT_SOURCE_DIR}/test/test-drive")
 
+# Ensure test data is available at runtime
+file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/test")
+file(CREATE_LINK "${PROJECT_SOURCE_DIR}/test/models"
+        "${CMAKE_CURRENT_BINARY_DIR}/test/models" SYMBOLIC)
+
 # Filter out the main.f90 files. We can only have one main() function in our tests
 set(PROJ_SRC_FILES_EXEC_MAIN ${PROJ_SRC_FILES})
 list(FILTER PROJ_SRC_FILES_EXEC_MAIN EXCLUDE REGEX ".*game_of_life.f90")
