--- a/docker/Dockerfile.ep-1
+++ b/docker/Dockerfile.ep-1
@@ -1,8 +1,8 @@
-FROM ghcr.io/ucl-arc/fortran-unit-testing-exercises-parent:main
+FROM ghcr.io/ucl-arc/fortran-unit-testing-exercises:main
 
-COPY episodes/1-into-to-unit-tests /1-into-to-unit-tests
+COPY --chown=vscode episodes/1-into-to-unit-tests /home/vscode/1-into-to-unit-tests
 
-WORKDIR /1-into-to-unit-tests/challenge
+WORKDIR /home/vscode/1-into-to-unit-tests/challenge
 
 # test challenge with fpm
 RUN fpm test
