--- a/docker/Dockerfile.ep-4
+++ b/docker/Dockerfile.ep-4
@@ -1,8 +1,8 @@
-FROM ghcr.io/ucl-arc/fortran-unit-testing-exercises-parent:main
+FROM ghcr.io/ucl-arc/fortran-unit-testing-exercises:main
 
-COPY episodes/4-debugging-a-broken-test /4-debugging-a-broken-test
+COPY --chown=vscode episodes/4-debugging-a-broken-test /home/vscode/4-debugging-a-broken-test
 
-WORKDIR /4-debugging-a-broken-test/challenge
+WORKDIR /home/vscode/4-debugging-a-broken-test/challenge
 
 # Fix intentional bug in code
 RUN sed -i -E 's/.*matrix\(row, col\) = temp_matrix\(row, col\)/matrix\(col, row\) = temp_matrix\(row, col\)/g' src/matrix_transforms.f90
