--- a/docker/Dockerfile.ep-5
+++ b/docker/Dockerfile.ep-5
@@ -1,14 +1,8 @@
-FROM ghcr.io/ucl-arc/fortran-unit-testing-exercises-parent:main
+FROM ghcr.io/ucl-arc/fortran-unit-testing-exercises:main
 
-COPY episodes/5-testing-parallel-code /5-testing-parallel-code
+COPY --chown=vscode episodes/5-testing-parallel-code /home/vscode/5-testing-parallel-code
 
-# Create a non-root user grant access totest dir and change to user
-# This is require to prevent running MPI as root
-RUN useradd -ms /bin/bash testuser
-RUN chown -R testuser:testuser /5-testing-parallel-code
-USER testuser
-
-WORKDIR /5-testing-parallel-code/challenge
+WORKDIR /home/vscode/5-testing-parallel-code/challenge
 
 # Fix intentional bug in code
 RUN mv ../solution/test_find_steady_state.pf ./test/ && \
