Update solution docs so that everything is explained within the README.md files

--- a/episodes/3-fortran-unit-test-syntax/challenge/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge/CMakeLists.txt
@@ -19,14 +19,14 @@ enable_testing()
 #--------------------------------------#
 #               veggies                #
 #--------------------------------------#
-# add_subdirectory("test/veggies")
+add_subdirectory("test/veggies")
 
 #--------------------------------------#
 #             test-drive               #
 #--------------------------------------#
-add_subdirectory("test/test-drive")
+# add_subdirectory("test/test-drive")
 
 #--------------------------------------#
 #               pFUnit                 #
 #--------------------------------------#
-add_subdirectory("test/pfunit")
+# add_subdirectory("test/pfunit")
