Add additional linting to pre-commit

--- a/episodes/4-debugging-a-broken-test/challenge/CMakeLists.txt
+++ b/episodes/4-debugging-a-broken-test/challenge/CMakeLists.txt
@@ -16,12 +16,12 @@ enable_testing()
 #--------------------------------------#
 #               veggies                #
 #--------------------------------------#
-add_subdirectory("test/veggies")
+# add_subdirectory("test/veggies")
 
 #--------------------------------------#
 #             test-drive               #
 #--------------------------------------#
-# add_subdirectory("test/test-drive")
+add_subdirectory("test/test-drive")
 
 #--------------------------------------#
 #               pFUnit                 #
