--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
       - name: Install pre-commit and fortitude
-        run: python -m pip install pre-commit fortitude-lint
+        run: python -m pip install -r requirements.txt
 
       - name: Run pre-commit
         run: pre-commit run --all-files --color always --verbose
