--- a/episodes/3-fortran-unit-test-syntax/challenge/test/veggies/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge/test/veggies/CMakeLists.txt
@@ -14,6 +14,7 @@ FetchContent_MakeAvailable("veggies")
 configure_file(${CMAKE_SOURCE_DIR}/test/veggies/CTestCustom.cmake ${CMAKE_BINARY_DIR})
 
 # Ensure test data is available at runtime
+file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/test")
 file(CREATE_LINK "${PROJECT_SOURCE_DIR}/test/models"
         "${CMAKE_CURRENT_BINARY_DIR}/test/models" SYMBOLIC)
 
