Align test_find_steady_state to RSECon slides

--- a/episodes/3-fortran-unit-test-syntax/challenge/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/challenge/CMakeLists.txt
@@ -19,7 +19,7 @@ enable_testing()
 #--------------------------------------#
 #               veggies                #
 #--------------------------------------#
-add_subdirectory("test/veggies")
+# add_subdirectory("test/veggies")
 
 #--------------------------------------#
 #             test-drive               #
